--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Блок-планер</string>
     <string name="logo">Стартовое меню</string>
     <string name="notes_greeting">Вкладка Заметок</string>
-    <string name="tasks_greeting">Вкладка Планирования</string>
+    <string name="tasks_greeting">Вкладка Планера</string>
     <string name="timer_greeting">Вкладка Таймера</string>
     <string name="notes_title">Заметки</string>
     <string name="tasks_title">Планер</string>
