Поле ввода текста в заметках

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="notes_title">Заметки</string>
     <string name="tasks_title">Планер</string>
     <string name="timer_title">Таймер</string>
+    <string name="notes_hint">Введите текст</string>
+
 </resources>
